# pre-commit-append-jira-issue

./: .pre-commit-hooks.yaml  append_jira_issue.py  pyproject.toml  test_append_jira_ticket.py
